Fix logo spacing

--- a/src/styles/default/_experience.scss
+++ b/src/styles/default/_experience.scss
@@ -129,6 +129,7 @@
 
   .company-logo {
     float: right;
+    margin-top: 5px;
     img {
       width: $logo-size-mobile;
     }
